--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,6 @@ wheels/
 /build
 
 # misc
-.DS_Store
 *.pem
 
 # debug
@@ -54,7 +53,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+# .env* # moved to dedicated section below
 
 # vercel
 .vercel
@@ -63,7 +62,25 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# IDE files
 .idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment files
+.env*
+!.env.example
 
 # ignore adding self-signed certs
 certs/
